# Lyra

./: .gitignore  CMakeLists.txt  Lyra.cpp  Lyra.h  LyraLexer.g4  LyraParser.g4  README.md  readme.md  todo.md
.antlr/: LyraLexer.interp  LyraLexer.java  LyraLexer.tokens  LyraParser.interp  LyraParser.java  LyraParser.tokens  LyraParserLexer.interp  LyraParserLexer.java  LyraParserLexer.tokens  LyraParserParser.java
example/: test.c  test.cpp
include/: audio.h  gui.h  host.h  keyboard.h  midi.h  mixer.h  processor.h  sine_wave.h  synth.h  wave_generator.h
include/audio/: audio_output.h
include/core/: audio_clock.h  controller.h  event.h  event_bus.h  midi_clip.h  mixer.h  player.h  timeline.h  track.h
include/host/: host.h
include/player/: sine_player.h
include/timeline/: event.h  midi_event.h  timeline.h
include/vst2.x/: aeffectx.h
include/vstsdk2.4/: .gitignore
src/: audio.c  audio.cpp  gui.c  host.cpp  keyboard.c  main.cpp  midi.c  midi.cpp  mixer.c  sine_wave.cpp  synth.c  wave_generator.c
src/audio/: audio_output.cpp
src/core/: mixer.cpp  timeline.cpp
src/player/: sine_player.cpp
